--- a/src/components/ui/AuthBox.css
+++ b/src/components/ui/AuthBox.css
@@ -13,8 +13,6 @@
 
 .auth-container button {
   position: relative;
-  left: 50%;
-  transform: translate(-60%);
 }
 .auth-container button:disabled {
   background-color: #d6d3d3;
